Added page navigation

--- a/src/pages/sol/axial_loading.astro
+++ b/src/pages/sol/axial_loading.astro
@@ -12,6 +12,25 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
 <Layout title="Axial Loading">
+
+<div slot="navtree">
+    <ul class='list-group list-group-flush py-0'> 
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#notation_and_convention'>Notation and Convention</a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#saint-venants_principle_slender_beam_case'>Saint-Venant's Principle: slender beam case</a>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#force-deformation_relation'>Force-Deformation Relation</a>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#axially_varying_properties'>Axially Varying Properties</a>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#principle_of_superposition_'>Principle of Superposition</a>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_solving_procedure'>General Solving Procedure</a>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#statically_indeterminate_problems'>Statically Indeterminate Problems</a>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_solving_procedure'>General Solving Procedure</a>
+            <ul class='list-group list-group-flush py-0'> 
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#thermal_effects_temperature_changes'>Thermal Effects: Temperature Changes</a></li> 
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#misfit_problems'>Misfit Problems</a></li>  
+            </ul>
+        </li>  
+    </ul>
+</div>
+
 <Section title="Axial Loading" id="axial_loading"></Section>
 
 <SubSection title="Notation and Convention" id="notation_and_convention">
