--- a/src/pages/sta/moments.astro
+++ b/src/pages/sta/moments.astro
@@ -17,11 +17,13 @@ A moment is a force applied at a distance from a point, which causes rotation ab
 
 The distance that the force is applied from is called the <em>moment arm</em>. 
 
-<Image src='/Statics/MomentsFigures/Moment.jpg' width='5'> If the bar is pinned at point  <InlineEquation equation='A' /> , the force  <InlineEquation equation='F' /> , applied at a distance  <InlineEquation equation='d' />  from point A, will cause a moment  <InlineEquation equation='M_A' />  about point A and make the bar rotate clockwise.</Image>
+<Image src='/Statics/MomentsFigures/Moment.jpg' width='5'> </Image>
+
+If the bar is pinned at point  <InlineEquation equation='A' /> , the force  <InlineEquation equation='F' /> , applied at a distance  <InlineEquation equation='d' />  from point A, will cause a moment  <InlineEquation equation='M_A' />  about point A and make the bar rotate clockwise.
 
 The only force that produces a rotation about a point is a force perpendicular to the moment arm (in this case, the moment arm is <InlineEquation equation='d' />).
 
-<BlueText>This could be a good place to add in example moments later in the side column for applications - could include muscle moments about a joint, oil rigs, the giant bucket that splashes water at a waterpark, pulling out a nail with a hammer.</BlueText>
+<!This could be a good place to add in example moments later in the side column for applications - could include muscle moments about a joint, oil rigs, the giant bucket that splashes water at a waterpark, pulling out a nail with a hammer.>
 
 </Section>
 
@@ -41,7 +43,7 @@ You can determine the direction of moments using the right hand rule and wrappin
 
 Moments are assumed to be positive when they point in the <InlineEquation equation='-\\hat{k}' /> direction (clockwise rotation) and negative when they point in the <InlineEquation equation='+\\hat{k}' /> direction (counterclockwise rotation). 
 
-<Image src='/Statics/MomentsFigures/MomentConventions.jpg' width='5'> Positive and negative moment conventions.</Image>
+<Image src='/Statics/MomentsFigures/MomentConventions.jpg' width='6'> Positive and negative moment conventions.</Image>
 
 </SubSection>
 
@@ -75,7 +77,7 @@ where <InlineEquation equation='F' /> is the magnitude of one of the force vecto
 
 Note: Couple moments are independent of location when applied to a rigid body, which means the resulting moment from a force couple can be "placed" anywhere on the rigid body with the same resulting rotation from the couple moment. 
 
-<Image src='/Statics/MomentsFigures/CoupleMoment.jpg' width=' 2.5'> A couple moment</Image>
+<Image src='/Statics/MomentsFigures/CoupleMoment.jpg' width=' 5'> A couple moment</Image>
 
 </SubSection>
 
