--- a/src/pages/sta/forcesystems.astro
+++ b/src/pages/sta/forcesystems.astro
@@ -13,8 +13,6 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 <SubSection title="Equivalent systems">
 
-<BlueText>Do we need this section?</BlueText>
-
 It can be helpful at times to reduce the forces on a body and combine resultant moments and simplify the analysis. For example, you can replace a force couple with their equivalent couple moment in a system. 
 
 These forces and moments will have the same external effect on the body, but the internal forces on the rigid body may be different. 
@@ -22,8 +20,6 @@ These forces and moments will have the same external effect on the body, but the
 </SubSection>
 
 <SubSection title="Concentrated forces">
-
-<BlueText>Do we need this section? - from lecture 2</BlueText>
 
 Concentrated forces are forces acting at a specific point on a body. 
 
@@ -38,7 +34,7 @@ Distributed loads (usually written as <InlineEquation equation='w(x)' />) are fo
 
 The magnitude of the equivalent force <InlineEquation equation='F_R' /> is the area under the <InlineEquation equation='w(x)' /> curve. The location of the resultant force <InlineEquation equation='F_R' /> is the location of the centroid of the shape of the force curve. 
 
-<BlueText>Later, we can add a side comment about examples of distributed loads in real life. For example, books on a bookshelf, air pressure over a lake, the distribution of loads on on the ground over your foot when you take a step</BlueText>
+<!--Later, we can add a side comment about examples of distributed loads in real life. For example, books on a bookshelf, air pressure over a lake, the distribution of loads on on the ground over your foot when you take a step-->
 
 </SubSection>
 
@@ -82,7 +78,7 @@ Now we can solve for the center of mass of the distributed load, <InlineEquation
 
 <DisplayEquation equation='\\bar{x} = \\dfrac{M_R}{F_R}\\' />
 
-<Image src='/Statics/ForceSystemsFigures/NonuniformLoad.jpg' width='5'> Nonuniform load. Need to remake this in the same style as the other pictures.</Image>
+<Image src='/Statics/ForceSystemsFigures/NonuniformLoad.jpg' width='8'> Nonuniform load.</Image>
 </SubSubSection>
 
 <!-- from lecture 11 and 12 -->
