--- a/src/pages/sta/moments.astro
+++ b/src/pages/sta/moments.astro
@@ -23,7 +23,7 @@ If the bar is pinned at point  <InlineEquation equation='A' /> , the force  <Inl
 
 The only force that produces a rotation about a point is a force perpendicular to the moment arm (in this case, the moment arm is <InlineEquation equation='d' />).
 
-<!This could be a good place to add in example moments later in the side column for applications - could include muscle moments about a joint, oil rigs, the giant bucket that splashes water at a waterpark, pulling out a nail with a hammer.>
+<!--This could be a good place to add in example moments later in the side column for applications - could include muscle moments about a joint, oil rigs, the giant bucket that splashes water at a waterpark, pulling out a nail with a hammer.-->
 
 </Section>
 
