--- a/src/pages/sta/free_body_diagrams.astro
+++ b/src/pages/sta/free_body_diagrams.astro
@@ -82,7 +82,7 @@ In this course, we assume springs are linearly elastic, which means that the for
 
 <DisplayEquation equation='{s} = {l-l_0}\\' />
 
-<Image src='/Statics/FBDFigures/SpringAssumptions.jpg' width='2'></Image>
+<Image src='/Statics/FBDFigures/SpringAssumptions.jpg' width='6'></Image>
 
 </SubSection>
 
@@ -90,7 +90,9 @@ In this course, we assume springs are linearly elastic, which means that the for
 
 If a surface is described as "smooth", we assume that there is no frictional force on the surface. Therefore, any force applied by the surface is normal to the surface. 
 
-<Image src='/Statics/FBDFigures/SmoothAssumptions.jpg' width='3'><BlueText>Taken from TAM 210 Lecture 5 - Slide 8. This could become an interactive image eventually where the angles of the surfaces are changed by the user and then the reaction forces are also changing.</BlueText></Image>
+<Image src='/Statics/FBDFigures/SmoothAssumptions.jpg' width='3'></Image>
+
+<!-- Taken from TAM 210 Lecture 5 - Slide 8. This could become an interactive image eventually where the angles of the surfaces are changed by the user and then the reaction forces are also changing.-->
 
 <!-- \subsection{\red{Equivalent force systems}} -->
 <!-- lecture 10 -->
