--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -48,8 +48,6 @@ The general procedures for creating shear / bending moment diagrams are:</p>
     <Item>Apply equations of equilibrium to solve for \(V\) and \(M\) as functions of x</Item>
 <Enumerate>
 
-<Image src='/Statics/IntForceFigures/DiagramProcedure.png' width='5'><BlueText>Adapted from TAM 210 Lecture 22</BlueText></Image>
-
 <Image src='/Statics/IntForceFigures/IntLoadRecap.jpg' width='5'><BlueText>Taken from TAM 210 Lecture 23</BlueText></Image>
 
 </SubSection>
@@ -59,10 +57,10 @@ The general procedures for creating shear / bending moment diagrams are:</p>
 <Enumerate>
 	<Item>When there is an external concentrated force or moment, there will be a "jump" in the shear force or bending moment diagram
     </Item>
-	<Item>\(w(x)\)</Item>
+	<Item>\(w(x)\), \(V\), and \(M\) are related via the following relationship: </Item>
 </Enumerate>
 
-<Image src='/Statics/IntForceFigures/IntDerivRelationships.jpg' width='5'><BlueText>Adapted from TAM 210 Lecture 25</BlueText></Image>
+<Image src='/Statics/IntForceFigures/IntDerivRelationships.jpg' width='5'>Relationships between (w(x)\), \(V\), and \(M\).</Image>
 
 </SubSection>
 
