--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -60,6 +60,6 @@ The general procedures for creating shear / bending moment diagrams are:</p>
 	<Item>\(w(x)\), \(V\), and \(M\) are related via the following relationship: </Item>
 </Enumerate>
 
-<Image src='/Statics/IntForceFigures/IntDerivRelationships.jpg' width='5'>Relationships between (w(x)\), \(V\), and \(M\).</Image>
+<Image src='/Statics/IntForceFigures/IntDerivRelationships.jpg' width='5'>Relationships between \(w(x)\), \(V\), and \(M\).</Image>
 
 </Layout>
