Ported Banked Turns section +fixes
ported over banked turns section, fixed animated drawing of the baseball with drag

--- a/src/components/CalloutContainer.astro
+++ b/src/components/CalloutContainer.astro
@@ -1,7 +1,10 @@
 <style>
     .card-container{
         width: calc(100%);
+        font-size: 1rem;
     }
+
+
 
     .sticky{
         align-self: start;
