--- a/src/pages/sol/stress.astro
+++ b/src/pages/sol/stress.astro
@@ -183,7 +183,9 @@ Determine the shear stress in the bolt.
 
 <Image src="/Solid_Mechanics/Stress-Figures/Stress Element.png" width="8"> Stress element</Image>
 
+<p>
  The components of normal and shear stress can be combined into the stress tensor. This is a symmetric matrix representing the state of stress with respect to three directions.
+</p>
 
 <DisplayEquation equation=" T= \\begin{bmatrix} \\sigma_{x} & \\tau_{xy} & \\tau_{xz} \\\\ \\tau_{yx}& \\sigma_{y} & \\tau_{yz} \\\\ \\tau_{zx}&\\tau_{zy}&\\sigma_{z} \\end{bmatrix} \\" />
 
@@ -193,6 +195,8 @@ Determine the shear stress in the bolt.
     <Item>  Three normal stress components: <InlineEquation equation="\\sigma_x, \\sigma_y, \\sigma_z" /></Item>
     <Item> Six shear stress components: <InlineEquation equation="\\tau_{xy} =\\tau_{yx}, \\tau_{xz}=\\tau_{zx}, \\tau_{yz}=\\tau_{zy}" /></Item>
 </Itemize>
+
+<p>Learn more about this topic on the <a href="/sol/stress_transformation">Stress Transformation</a> page.</p>
 
  The first subscript describes the surface <strong>orientation</strong> in the normal direction. The second subscript describes the <strong>direction</strong> of the stress.
 
