--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -79,8 +79,8 @@ const pagename = cleaned[1]
 			white 60%
 		);
 		--text-main: black;
-        --text-secondary: rgba(71, 71, 71, 0.75);
-		--text-tertiary: rgba(81, 81, 81, .65);
+        --text-secondary: #666;
+		--text-tertiary: #7e7e7e;
 	}
 
 	mjx-container{
