--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -79,8 +79,8 @@ const pagename = cleaned[1]
 			white 60%
 		);
 		--text-main: black;
-        --text-secondary: #666;
-		--text-tertiary: #7e7e7e;
+        --text-secondary: #4a4a4a;
+		--text-tertiary: #666;
 	}
 
 	mjx-container{
