--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -36,11 +36,10 @@ import DisplayTable from "../../components/DisplayTable.astro"
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#newton_versus_leibniz_notation'>Newton versus Leibniz Notation</a></li>
         </ul>
     </li>
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#derivatives_and_vector_positions'>Derivatives and vector \"positions\"</a>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#derivatives_and_vector_positions'>Derivatives and vector "positions"</a>
         <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cartesian'>Cartesian</a></li>
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#non-cartesian_polar_basis'>Non-Cartesian: Polar basis</a></li>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#graphical_estimation'>Graphical estimation</a></li>
         </ul>
     </li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#chain_rule'>Chain rule</a>
@@ -114,9 +113,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </DisplayEquation>
 
     <p>
-      The fact that we can write the dot product <a
-      href="#rvv-es">in terms of components</a> as well as <a
-      href="#rvv-ed">in terms of lengths and angle</a> is very
+      The fact that we can write the dot product in terms of components as well as in terms of lengths and angle is very
       helpful for calculating the length and angles of vectors
       from the component representations.
     </p>
@@ -512,8 +509,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
   <p>
     When thinking about vector derivatives, it is important to
-    remember that vectors <a href="rvv.html#rvv-fc">don't have
-    positions</a>. Even if a vector is drawn moving about, this
+    remember that vectors don't have positions. Even if a vector is drawn moving about, this
     is irrelevant for the derivative.  Only changes to length
     and direction are important.
   </p>
@@ -710,7 +706,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 <SubSection title="Integration">
 
 <p>
-    Cartesian:
+    <b>Cartesian:</b>
   </p>
 
     <DisplayEquation equation= "\\vec{v} = \\dot{x} \\hat\\imath + \\dot{y} \\hat\\jmath"/>
@@ -719,7 +715,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     <li>Integrate <InlineEquation equation="\\dot{x}" />  and <InlineEquation equation="\\dot{y}" /> to find \(x\) and \(y\). </li>
   </ul>
   <p>
-    Polar:
+    <b>Polar:</b>
   </p>
 
     <DisplayEquation equation= "\\vec{v} = \\dot{r} \\hat{e}_r + \\dot{r} \\dot{\\theta} \\hat{e}_\\theta"/>
