--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,10 +33,12 @@ const pagename = cleaned[1]
 
 		
 		<script src="/jquery-2.1.4.min.js" is:inline></script>
-		<script src="/PrairieDraw.js" is:inline></script>
-		<script src="/PrairieGeom.js" is:inline></script>
 		<script src="/sha1.js" is:inline></script>
 		<script src="/sylvester.js" is:inline></script>
+		<script src="/PrairieGeom.js" is:inline></script>
+		<script src="/PrairieDraw__.js" is:inline></script>
+		
+		
 		<script src="/static/js/simplified_view.js" is:inline></script>
 		
 		<link rel="stylesheet" href="/static/css/main.css">
