fixed other anim

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const pagename = cleaned[1]
 		<script src="/sha1.js" is:inline></script>
 		<script src="/sylvester.js" is:inline></script>
 		<script src="/PrairieGeom.js" is:inline></script>
-		<script src="/PrairieDraw__.js" is:inline></script>
+		<script src="/PrairieDraw.js" is:inline></script>
 		
 		
 		<script src="/static/js/simplified_view.js" is:inline></script>
