--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -524,10 +524,33 @@ import DisplayTable from "../../components/DisplayTable.astro"
       <p class="controls">
         Show:
         <button class="option-toggle:rvc-fp-c:showVelocity0" onclick="rvc_fp_c.toggleOption('showVelocity0')">derivative at \(t = 0\)</button>
-        <button class="option-toggle:rvc-fp-c:showFixedBase"><InlineEquation equation="\\vec{a}(t)" onclick="rvc_fp_c.toggleOption('showFixedBase'); "/> with fixed base</button>
+        <button class="option-toggle:rvc-fp-c:showFixedBase"  onclick="rvc_fp_c.toggleOption('showFixedBase'); "><InlineEquation equation="\\vec{a}(t)"/> with fixed base</button>
         <button class="option-toggle:rvc-fp-c:showVelocity" onclick="rvc_fp_c.toggleOption('showVelocity'); rvc_fp_c.redraw();">derivative at current \(t\)</button>
       </p>
     </div>
+    <p class="controls">
+      Movement:
+      <input type="radio" name="rvc-fp-c-movement" value="bounce" class="data-input:rvc-fp-c:movement" onclick="rvc_fp_c.setOption('movement', this.value)" checked/>
+      bounce
+      <input type="radio" name="rvc-fp-c-movement" value="stretch" class="data-input:rvc-fp-c:movement" onclick="rvc_fp_c.setOption('movement', this.value)"/>
+      stretch
+      <input type="radio" name="rvc-fp-c-movement" value="circle" class="data-input:rvc-fp-c:movement" onclick="rvc_fp_c.setOption('movement', this.value)"/>
+      circle
+      <input type="radio" name="rvc-fp-c-movement" value="twist" class="data-input:rvc-fp-c:movement" onclick="rvc_fp_c.setOption('movement', this.value)"/>
+      twist
+      <input type="radio" name="rvc-fp-c-movement" value="slider" class="data-input:rvc-fp-c:movement" onclick="rvc_fp_c.setOption('movement', this.value)"/>
+      slider
+      <input type="radio" name="rvc-fp-c-movement" value="rotate" class="data-input:rvc-fp-c:movement" onclick="rvc_fp_c.setOption('movement', this.value)"/>
+      rotate
+      <input type="radio" name="rvc-fp-c-movement" value="vertical" class="data-input:rvc-fp-c:movement" onclick="rvc_fp_c.setOption('movement', this.value)"/>
+      vertical
+      <input type="radio" name="rvc-fp-c-movement" value="fly" class="data-input:rvc-fp-c:movement" onclick="rvc_fp_c.setOption('movement', this.value)"/>
+      fly
+    </p>
+    <p class="figureCaption">
+      <em>Vector derivatives for moving vectors. Vector movement is
+      irrelevant when computing vector derivatives.</em>
+    </p>
   </PrairieDrawCanvas>
 </SubSection>
 
